// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rule details page tests should render successfully 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--xlarge StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/accountId/ce"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="ce-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
                      fill="url(#ce-main_svg__a)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="ce-main_svg__a"
                        x1="5.821"
                        x2="19.271"
                        y1="4.393"
                        y2="33.469"
                      >
                        <stop
                          stop-color="#00CFDE"
                        />
                        <stop
                          offset="1"
                          stop-color="#05A660"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  cloudCostsText
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/accountId/ce/autostopping-rules"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  ce.co.breadCrumb.rules
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="30"
                viewBox="0 0 14 10"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
                >
                  test rule
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <label
                          class="Toggle--toggle StyledProps--main"
                          tabindex="0"
                        >
                          <input
                            checked=""
                            class="Toggle--input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="Toggle--toggleIcon"
                          />
                          
                        </label>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-small"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-body StyledProps--font-size-small"
                >
                  ce.co.ruleTypes.ec2
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            edit
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="main-trash"
          >
            <svg
              height="16"
              viewBox="0 0 16 20"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            delete
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody ruleDetailsBody"
      data-name="page-body"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main col1"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
            >
              summary
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                    icon="calendar"
                  >
                    <svg
                      data-icon="calendar"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        calendar
                      </desc>
                      <path
                        d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    projectsOrgs.landingDashboard.last30Days
                  </span>
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main costWidget savingsWidget"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font StyledProps--main costText"
                >
                  ce.co.ruleDetails.totalSavings
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main costText StyledProps--font-variation-h2"
              >
                $12.42
              </p>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main costWidget spendWidget"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font StyledProps--main costText"
                >
                  ce.co.ruleDetails.totalActualSpend
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main costText StyledProps--font-variation-h2"
              >
                $17.53
              </p>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main costWidget"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font StyledProps--main costText"
                >
                  ce.co.ruleDetails.potentialCost
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main costText StyledProps--font-variation-h2"
              >
                $29.95
              </p>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--margin-right-xxlarge StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
            style="flex: 3;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
            >
              ce.co.ruleDetails.costGraphHeader
            </p>
            <div />
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main logsContainer"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
            >
              ce.co.ruleDetails.logsHeader
            </p>
            <div
              class="logViewer gatewayLogView"
              style="--char-size: 2ch;"
            >
              <pre>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    1
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                    <span
                      class="ansi-black-fg"
                    >
                      2021-04-05T13:14:58.857084Z  Rule state changed to: coolingdown  
                    </span>
                  </span>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    2
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                    <span
                      class="ansi-red-fg ansi-decoration-bold"
                    >
                      2021-04-05T13:14:58.857084Z  Rule state changed to: coolingdown Error: null 
                    </span>
                  </span>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    3
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                    <span
                      class="ansi-green-fg"
                    >
                      2021-04-05T13:14:58.857084Z  Rule state changed to: active 
                    </span>
                  </span>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    4
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="colDivider"
        />
        <div
          class="StyledProps--font StyledProps--main col2"
        >
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_ruleDetailsTabs_details"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="details"
                id="bp3-tab-title_ruleDetailsTabs_details"
                role="tab"
                tabindex="0"
              >
                details
              </div>
              <div
                aria-controls="bp3-tab-panel_ruleDetailsTabs_ssh"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="ssh"
                id="bp3-tab-title_ruleDetailsTabs_ssh"
                role="tab"
                tabindex="0"
              >
                ce.co.ruleDetails.sshTab.cli
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_ruleDetailsTabs_details"
              class="bp3-tab-panel"
              id="bp3-tab-panel_ruleDetailsTabs_details"
              role="tabpanel"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main tabRowContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                  >
                    ce.co.gatewayReview.gatewayDetails
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetails.detailsTab.label.ruleId
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      1
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetailsHeader.idleTime
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      5 min
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.gatewayReview.instanceType
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      ce.nodeRecommendation.onDemand
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetailsHeader.hostName
                    </p>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main link"
                        style="--text-line-clamp: 1;"
                      >
                        dummy
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyBtn Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-duplicate StyledProps--main StyledProps--color StyledProps--color-primary7"
                              icon="duplicate"
                            >
                              <svg
                                data-icon="duplicate"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  duplicate
                                </desc>
                                <path
                                  d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      connector
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center;"
                      >
                        <span
                          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                          data-icon="service-aws"
                        >
                          <svg
                            height="22"
                            viewBox="0 0 14 10"
                            width="22"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                              fill="#252f3e"
                            />
                            <g
                              fill="#f90"
                            >
                              <path
                                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                              />
                              <path
                                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                              />
                            </g>
                          </svg>
                        </span>
                        Sample
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                         / 
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center;"
                      >
                        <span
                          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                          data-icon="app-kubernetes"
                        >
                          <svg
                            height="22"
                            viewBox="0 0 32 30"
                            width="22"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                            >
                              <path
                                d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                                fill="#326CE5"
                              />
                              <path
                                d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                                fill="#FFF"
                                stroke="#FFF"
                                stroke-width="0.25"
                              />
                            </g>
                          </svg>
                        </span>
                        Sample
                      </p>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.accessPoint.loadbalancer
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      dummyAccessPoint
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetails.detailsTab.label.vmsManaged
                    </p>
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          1
                        </p>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
                            style="display: flex; align-items: center;"
                          >
                            ce.common.expand
                            <span
                              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary7"
                              data-icon="main-chevron-down"
                            >
                              <svg
                                height="14"
                                viewBox="0 0 14 8"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                  fill="#4d5969"
                                />
                              </svg>
                            </span>
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.rulesTableHeaders.status
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main stateLabel runningLabel StyledProps--font-variation-uppercased"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-play StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                        icon="play"
                      >
                        <svg
                          data-icon="play"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            play
                          </desc>
                          <path
                            d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.969.969 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      ce.co.ruleState.running
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main tabRowContainer StyledProps--margin-top-xlarge"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                  >
                    ce.co.autoStoppingRule.configuration.step4.advancedConfiguration
                  </p>
                  <label
                    class="Toggle--toggle toggleInput StyledProps--main"
                    data-testid="progressPageViewToggle"
                  >
                    <input
                      class="Toggle--input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="Toggle--toggleIcon"
                    />
                    ce.co.autoStoppingRule.review.hideProgressPage
                  </label>
                  <label
                    class="Toggle--toggle toggleInput StyledProps--main"
                    data-testid="dryRunToggle"
                  >
                    <input
                      class="Toggle--input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="Toggle--toggleIcon"
                    />
                    ce.co.dryRunLabel
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rule details page tests should render successfully 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--xlarge StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/accountId/ce"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="ce-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
                      fill="url(#ce-main_svg__a)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="ce-main_svg__a"
                        x1="5.821"
                        x2="19.271"
                        y1="4.393"
                        y2="33.469"
                      >
                        <stop
                          stop-color="#00CFDE"
                        />
                        <stop
                          offset="1"
                          stop-color="#05A660"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  cloudCostsText
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/accountId/ce/autostopping-rules"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  ce.co.breadCrumb.rules
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="30"
                viewBox="0 0 14 10"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
                >
                  test rule
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <label
                          class="Toggle--toggle StyledProps--main"
                          tabindex="0"
                        >
                          <input
                            checked=""
                            class="Toggle--input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="Toggle--toggleIcon"
                          />
                          
                        </label>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-small"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-body StyledProps--font-size-small"
                >
                  ce.co.ruleTypes.ec2
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                   | 
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--font-size-small"
                >
                  createdBy
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-body StyledProps--font-size-small"
                >
                  abc
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            edit
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="main-trash"
          >
            <svg
              height="16"
              viewBox="0 0 16 20"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            delete
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody ruleDetailsBody"
      data-name="page-body"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main col1"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
            >
              summary
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                    icon="calendar"
                  >
                    <svg
                      data-icon="calendar"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        calendar
                      </desc>
                      <path
                        d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    projectsOrgs.landingDashboard.last30Days
                  </span>
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main costWidget savingsWidget"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font StyledProps--main costText"
                >
                  ce.co.ruleDetails.totalSavings
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main costText StyledProps--font-variation-h2"
              >
                $12.42
              </p>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main costWidget spendWidget"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font StyledProps--main costText"
                >
                  ce.co.ruleDetails.totalActualSpend
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main costText StyledProps--font-variation-h2"
              >
                $17.53
              </p>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main costWidget"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font StyledProps--main costText"
                >
                  ce.co.ruleDetails.potentialCost
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main costText StyledProps--font-variation-h2"
              >
                $29.95
              </p>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--margin-right-xxlarge StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
            style="flex: 3;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
            >
              ce.co.ruleDetails.costGraphHeader
            </p>
            <div />
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main logsContainer"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
            >
              ce.co.ruleDetails.logsHeader
            </p>
            <div
              class="logViewer gatewayLogView"
              style="--char-size: 2ch;"
            >
              <pre>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    1
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                    <span
                      class="ansi-black-fg"
                    >
                      2021-04-05T13:14:58.857084Z  Rule state changed to: coolingdown  
                    </span>
                  </span>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    2
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                    <span
                      class="ansi-red-fg ansi-decoration-bold"
                    >
                      2021-04-05T13:14:58.857084Z  Rule state changed to: coolingdown Error: null 
                    </span>
                  </span>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    3
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                    <span
                      class="ansi-green-fg"
                    >
                      2021-04-05T13:14:58.857084Z  Rule state changed to: active 
                    </span>
                  </span>
                </div>
                <div
                  class="line"
                >
                  <span
                    class="lineNumber"
                  >
                    4
                  </span>
                  <span
                    class="logLine"
                  >
                    <span
                      class=""
                    />
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="colDivider"
        />
        <div
          class="StyledProps--font StyledProps--main col2"
        >
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_ruleDetailsTabs_details"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="details"
                id="bp3-tab-title_ruleDetailsTabs_details"
                role="tab"
                tabindex="0"
              >
                details
              </div>
              <div
                aria-controls="bp3-tab-panel_ruleDetailsTabs_ssh"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="ssh"
                id="bp3-tab-title_ruleDetailsTabs_ssh"
                role="tab"
                tabindex="0"
              >
                ce.co.ruleDetails.sshTab.cli
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_ruleDetailsTabs_details"
              class="bp3-tab-panel"
              id="bp3-tab-panel_ruleDetailsTabs_details"
              role="tabpanel"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main tabRowContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                  >
                    ce.co.gatewayReview.gatewayDetails
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetails.detailsTab.label.ruleId
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      1
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetailsHeader.idleTime
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      5 min
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.gatewayReview.instanceType
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      ce.nodeRecommendation.onDemand
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetailsHeader.hostName
                    </p>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main link"
                        style="--text-line-clamp: 1;"
                      >
                        dummy
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyBtn Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-duplicate StyledProps--main StyledProps--color StyledProps--color-primary7"
                              icon="duplicate"
                            >
                              <svg
                                data-icon="duplicate"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  duplicate
                                </desc>
                                <path
                                  d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      connector
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center;"
                      >
                        <span
                          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                          data-icon="service-aws"
                        >
                          <svg
                            height="22"
                            viewBox="0 0 14 10"
                            width="22"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                              fill="#252f3e"
                            />
                            <g
                              fill="#f90"
                            >
                              <path
                                d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                              />
                              <path
                                d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                              />
                            </g>
                          </svg>
                        </span>
                        Sample
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                         / 
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center;"
                      >
                        <span
                          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                          data-icon="app-kubernetes"
                        >
                          <svg
                            height="22"
                            viewBox="0 0 32 30"
                            width="22"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                            >
                              <path
                                d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                                fill="#326CE5"
                              />
                              <path
                                d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                                fill="#FFF"
                                stroke="#FFF"
                                stroke-width="0.25"
                              />
                            </g>
                          </svg>
                        </span>
                        Sample
                      </p>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.accessPoint.loadbalancer
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body"
                    >
                      dummyAccessPoint
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.ruleDetails.detailsTab.label.vmsManaged
                    </p>
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          1
                        </p>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
                            style="display: flex; align-items: center;"
                          >
                            ce.common.expand
                            <span
                              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary7"
                              data-icon="main-chevron-down"
                            >
                              <svg
                                height="14"
                                viewBox="0 0 14 8"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                  fill="#4d5969"
                                />
                              </svg>
                            </span>
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main detailRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                    >
                      ce.co.rulesTableHeaders.status
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main stateLabel runningLabel StyledProps--font-variation-uppercased"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-play StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                        icon="play"
                      >
                        <svg
                          data-icon="play"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            play
                          </desc>
                          <path
                            d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.969.969 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      ce.co.ruleState.running
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main tabRowContainer StyledProps--margin-top-xlarge"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                  >
                    ce.co.autoStoppingRule.configuration.step4.advancedConfiguration
                  </p>
                  <label
                    class="Toggle--toggle toggleInput StyledProps--main"
                    data-testid="progressPageViewToggle"
                  >
                    <input
                      class="Toggle--input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="Toggle--toggleIcon"
                    />
                    ce.co.autoStoppingRule.review.hideProgressPage
                  </label>
                  <label
                    class="Toggle--toggle toggleInput StyledProps--main"
                    data-testid="dryRunToggle"
                  >
                    <input
                      class="Toggle--input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="Toggle--toggleIcon"
                    />
                    ce.co.dryRunLabel
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
